# herd-store-duckdb

./: .env.example  README.md  pyproject.toml
.github/workflows/: test.yml
herd_store_duckdb/: __init__.py  adapter.py
tests/: test_adapter.py  test_column_mapping.py
