[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-store-duckdb"
version = "0.0.1"
description = "Herd storage adapter — local DuckDB + MotherDuck."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Faust Eriksen" }
]
keywords = [
    "ai", "agents", "governance", "herd", "duckdb", "motherduck",
    "storage-adapter", "data-warehouse"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Database",
]
dependencies = [
    "herd-core>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/dbt-conceptual/herd-store-duckdb"
Repository = "https://github.com/dbt-conceptual/herd-store-duckdb"
Issues = "https://github.com/dbt-conceptual/herd-store-duckdb/issues"
